# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [3.5.6] - 12-04-2021

### Added

- Usuários podem criar temas! Etes usuários recebem uma participação de lucros dos seus temas vendidos!
- Novo Comando! `/status design`. Com este comando é possivel ver as informações de algum designer, como a quantidade de vendas e o lucro!

### Fixed

- Título do embed de máximo de prêmios ao votar

## [3.5.5] 11-30-2021

### Added

- Novos Itens Mágicos para aceleação de caças! `Ampulheta Gigante` (Gigantes) - Drop: 0.46%. `Harpa Celestial` (Anjos) - Drop: 0.32156%. `Trombetas dos Céus` (Arcanjos) - Drop: 0.22216%. `Chave do Acampamento dos Meio Sangue` (Semideuses) - Drop: 0.11985%. `Cabeça da Medusa` (Deuses) - Drop: 0.0666%

### Changed

- Probabilidade de alguns itens de caça foram mudadas! **O Colt**: 1: `46%` -> `38%` | 2: `18%` -> `24%` | 5: `9%` -> `11%`. **Deicídio**: 0: `75%` -> `82%` | 1: `25%` -> `18%`
- O comando `/loja comprar temas` foi melhorado para facilitar o uso
- Votos especiais mostram os upvotes novamente

## [3.5.3] 2021-11-30

### Added

- Novo layout de perfil! Clima Natalino!
- O evento de Natal Começou! Compre o perfil Clima Natalino durante dezembro e ganhe uma badge exclusiva!
- Novas Badges: Natal 2021 e Bot (Apenas para bots verificados)

### Fixed

- Blackjack enviava varias mensagens ao inves de editar

## [3.5.2] 2021-11-26

### Added

- Agora é possível alterar o layout de perfil, cartas da Menhera (Blackjack e o futuro Poker), o fundo destas e a cor da mesa das cartas
- Comando `/personalizar temas` para escolher os temas de sua conta
- Agora é possivel comprar `alguns` temas pela loja `/loja comprar temas`

### Changed

- Fetches desnecessários foram mudados para forge para fazer requests à API
- O BlackJack está de cara nova!