@@ -105,6 +105,10 @@
     "14": {
       "name": "Christmas Weather",
       "description": "It's Christmas, It's Christmas! Come celebrate Christmas with the First Next Generation Profile Layout"
+    },
+    "15": {
+      "name": "Retired Warrior",
+      "description": "You did it. You may rest now."
     }
   }
 }
