@@ -105,6 +105,10 @@
     "14": {
       "name": "Clima Natalino",
       "description": "É natal, é natal! Venha comemorar o natal com o Primeiro Layout de Perfil da Nova Geração"
+    },
+    "15": {
+      "name": "Guerreiro Aposentado",
+      "description": "Você conseguiu, descanse um pouco."
     }
   }
 }
