@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ### Added
 
+- Novo tema de perfil! **Guerreiro Aposentado**. Criado por Relkhin#4842 (853341889016365097)
 - Usuários podem criar temas! Etes usuários recebem uma participação de lucros dos seus temas vendidos!
 - Novo Comando! `/status design`. Com este comando é possivel ver as informações de algum designer, como a quantidade de vendas e o lucro!
 
